@@ -1,17 +1,17 @@
 /*
  * SoapUI, Copyright (C) 2004-2022 SmartBear Software
  *
- * Licensed under the EUPL, Version 1.1 or - as soon as they will be approved by the European Commission - subsequent 
- * versions of the EUPL (the "Licence"); 
- * You may not use this work except in compliance with the Licence. 
- * You may obtain a copy of the Licence at: 
- * 
- * http://ec.europa.eu/idabc/eupl 
- * 
- * Unless required by applicable law or agreed to in writing, software distributed under the Licence is 
- * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
- * express or implied. See the Licence for the specific language governing permissions and limitations 
- * under the Licence. 
+ * Licensed under the EUPL, Version 1.1 or - as soon as they will be approved by the European Commission - subsequent
+ * versions of the EUPL (the "Licence");
+ * You may not use this work except in compliance with the Licence.
+ * You may obtain a copy of the Licence at:
+ *
+ * http://ec.europa.eu/idabc/eupl
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the Licence is
+ * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ * express or implied. See the Licence for the specific language governing permissions and limitations
+ * under the Licence.
  */
 
 package com.eviware.soapui.impl.wsdl.submit.filters;
@@ -33,8 +33,8 @@ import java.io.StringReader;
 import java.io.StringWriter;
 
 public abstract class AbstractWssRequestFilter extends AbstractRequestFilter {
-    private static final String REQUEST_CONTENT_HASH_CODE = "requestContentHashCode";
     public static final String WSS_DOC = "WsSecurityAuthenticationRequestFilter@Document";
+    private static final String REQUEST_CONTENT_HASH_CODE = "requestContentHashCode";
     protected static DocumentBuilderFactory dbf;
     protected static DocumentBuilder db;
 
@@ -45,21 +45,21 @@ public abstract class AbstractWssRequestFilter extends AbstractRequestFilter {
 
         try {
             db = dbf.newDocumentBuilder();
-        } catch (ParserConfigurationException e) {
+        }
+        catch (ParserConfigurationException e) {
             SoapUI.logError(e);
         }
     }
 
     protected static Document getWssDocument(SubmitContext context) throws SAXException, IOException {
-        String request = (String) context.getProperty(BaseHttpRequestTransport.REQUEST_CONTENT);
-        Document doc = (Document) context.getProperty(WSS_DOC);
+        String request = (String)context.getProperty(BaseHttpRequestTransport.REQUEST_CONTENT);
+        Document doc = (Document)context.getProperty(WSS_DOC);
 
         // this should be solved with pooling for performance-reasons..
-        if (doc == null
-                || ((Integer) context.getProperty(REQUEST_CONTENT_HASH_CODE)).intValue() != request.hashCode()) {
+        if (doc == null || ((Integer)context.getProperty(REQUEST_CONTENT_HASH_CODE)).intValue() != request.hashCode()) {
             synchronized (db) {
                 doc = db.parse(new InputSource(new StringReader(request)));
-                context.setProperty(REQUEST_CONTENT_HASH_CODE, new Integer(request.hashCode()));
+                context.setProperty(REQUEST_CONTENT_HASH_CODE, Integer.valueOf(request.hashCode()));
                 context.setProperty(WSS_DOC, doc);
             }
         }
@@ -72,7 +72,7 @@ public abstract class AbstractWssRequestFilter extends AbstractRequestFilter {
         XmlUtils.serialize(dom, writer);
         String request = writer.toString();
         context.setProperty(BaseHttpRequestTransport.REQUEST_CONTENT, request);
-        context.setProperty(REQUEST_CONTENT_HASH_CODE, new Integer(request.hashCode()));
+        context.setProperty(REQUEST_CONTENT_HASH_CODE, Integer.valueOf(request.hashCode()));
     }
 
     public void afterRequest(SubmitContext context, Response response) {
