@@ -1,17 +1,17 @@
 /*
  * SoapUI, Copyright (C) 2004-2022 SmartBear Software
  *
- * Licensed under the EUPL, Version 1.1 or - as soon as they will be approved by the European Commission - subsequent 
- * versions of the EUPL (the "Licence"); 
- * You may not use this work except in compliance with the Licence. 
- * You may obtain a copy of the Licence at: 
- * 
- * http://ec.europa.eu/idabc/eupl 
- * 
- * Unless required by applicable law or agreed to in writing, software distributed under the Licence is 
- * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
- * express or implied. See the Licence for the specific language governing permissions and limitations 
- * under the Licence. 
+ * Licensed under the EUPL, Version 1.1 or - as soon as they will be approved by the European Commission - subsequent
+ * versions of the EUPL (the "Licence");
+ * You may not use this work except in compliance with the Licence.
+ * You may obtain a copy of the Licence at:
+ *
+ * http://ec.europa.eu/idabc/eupl
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the Licence is
+ * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ * express or implied. See the Licence for the specific language governing permissions and limitations
+ * under the Licence.
  */
 
 package com.eviware.soapui.support.action.swing;
@@ -40,7 +40,7 @@ import java.beans.PropertyChangeListener;
 
 public class SwingMultiActionDelegate extends AbstractAction implements PropertyChangeListener, SoapUIActionMarker {
     private final SoapUIActionMapping<?> mapping;
-    private ModelItem[] targets;
+    private final ModelItem[] targets;
 
     public SwingMultiActionDelegate(SoapUIActionMapping<?> mapping, ModelItem[] targets) {
         super(mapping.getName());
@@ -48,15 +48,15 @@ public class SwingMultiActionDelegate extends AbstractAction implements Property
         this.targets = targets;
 
         if (mapping.getDescription() != null) {
-            putValue(Action.SHORT_DESCRIPTION, mapping.getDescription());
+            putValue(SHORT_DESCRIPTION, mapping.getDescription());
         }
 
         if (mapping.getIconPath() != null) {
-            putValue(Action.SMALL_ICON, UISupport.createImageIcon(mapping.getIconPath()));
+            putValue(SMALL_ICON, UISupport.createImageIcon(mapping.getIconPath()));
         }
 
         if (mapping.getKeyStroke() != null) {
-            putValue(Action.ACCELERATOR_KEY, UISupport.getKeyStroke(mapping.getKeyStroke()));
+            putValue(ACCELERATOR_KEY, UISupport.getKeyStroke(mapping.getKeyStroke()));
         }
 
         setEnabled(mapping.getAction().isEnabled());
@@ -64,10 +64,10 @@ public class SwingMultiActionDelegate extends AbstractAction implements Property
         String name = mapping.getName();
         int ix = name.indexOf('&');
         if (ix >= 0) {
-            putValue(Action.NAME, name.substring(0, ix) + name.substring(ix + 1));
+            putValue(NAME, name.substring(0, ix) + name.substring(ix + 1));
             // This doesn't seem to work in Java 5:
             // putValue( Action.DISPLAYED_MNEMONIC_INDEX_KEY, new Integer( ix ));
-            putValue(Action.MNEMONIC_KEY, new Integer(name.charAt(ix + 1)));
+            putValue(MNEMONIC_KEY, Integer.valueOf(name.charAt(ix + 1)));
         }
     }
 
@@ -81,16 +81,20 @@ public class SwingMultiActionDelegate extends AbstractAction implements Property
             SoapUIClassLoaderState state = SoapUIExtensionClassLoader.ensure();
 
             try {
-                ((SoapUIMultiAction) mapping.getAction()).perform(targets, mapping.getParam());
-            } catch (Throwable t) {
+                ((SoapUIMultiAction)mapping.getAction()).perform(targets, mapping.getParam());
+            }
+            catch (Throwable t) {
                 SoapUI.logError(t);
-            } finally {
+            }
+            finally {
                 state.restore();
             }
-        } else {
+        }
+        else {
             try {
-                ((SoapUIMultiAction) mapping.getAction()).perform(targets, mapping.getParam());
-            } catch (Throwable t) {
+                ((SoapUIMultiAction)mapping.getAction()).perform(targets, mapping.getParam());
+            }
+            catch (Throwable t) {
                 SoapUI.logError(t);
             }
         }
@@ -98,7 +102,7 @@ public class SwingMultiActionDelegate extends AbstractAction implements Property
 
     public void propertyChange(PropertyChangeEvent evt) {
         if (evt.getPropertyName().equals(SoapUIAction.ENABLED_PROPERTY)) {
-            setEnabled(((Boolean) evt.getNewValue()).booleanValue());
+            setEnabled(((Boolean)evt.getNewValue()).booleanValue());
         }
     }
 
